--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ LazyData: true
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.1.0
+URL: https://github.com/albersonmiranda/desigualdade
+BugReports: https://github.com/albersonmiranda/desigualdade/issues
