--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,7 @@ Depends:
 RoxygenNote: 7.1.0
 URL: https://github.com/albersonmiranda/desigualdade
 BugReports: https://github.com/albersonmiranda/desigualdade/issues
+Imports: 
+    dplyr,
+    ggplot2,
+    patchwork
