--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Alberson Miranda
 Maintainer: Alberson Miranda <albersonmiranda@hotmail.com>
 Description: Esse pacote facilita a visualização da relação entre
     pobreza e raça nos estados brasileiros.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
@@ -15,6 +15,7 @@ RoxygenNote: 7.1.0
 URL: https://github.com/albersonmiranda/desigualdade
 BugReports: https://github.com/albersonmiranda/desigualdade/issues
 Imports: 
-    dplyr,
-    ggplot2,
-    patchwork
+    tidyverse,
+    patchwork,
+    ggrepel,
+    scales
