--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,5 +41,5 @@ jobs:
         shell: Rscript {0}
 
       - name: Lint
-        run: lintr::lint_package(linters = lintr::with_defaults(assignment_linter = NULL))
+        run: lintr::lint_package(linters = lintr::with_defaults(assignment_linter = NULL), exclusions = list.files(path = "R", pattern = "censo*"))
         shell: Rscript {0}
